# mechylang

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
ariadne/: all.html  enum.CharSet.html  enum.Color.html  enum.IndexType.html  enum.LabelAttach.html  enum.ReportKind.html  fn.sources.html  index.html  struct.ColorGenerator.html  struct.Config.html  struct.FileCache.html  struct.FnCache.html  struct.Label.html  struct.Line.html  struct.Report.html  struct.ReportBuilder.html  struct.Source.html  trait.Cache.html  trait.Fmt.html  trait.Span.html  trait.StdoutFmt.html
clap/: all.html  enum.ArgAction.html  enum.ColorChoice.html  enum.ValueHint.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Command.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
clap_builder/: all.html  enum.ColorChoice.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
clap_derive/: all.html  derive.Args.html  derive.Parser.html  derive.Subcommand.html  derive.ValueEnum.html  index.html
color_print/: all.html  index.html  macro.ceprint.html  macro.ceprintln.html  macro.cformat.html  macro.cprint.html  macro.cprintln.html  macro.cstr.html  macro.cwrite.html  macro.cwriteln.html  macro.untagged.html
color_print_proc_macro/: all.html  index.html  macro.ceprint.html  macro.ceprintln.html  macro.cformat.html  macro.cprint.html  macro.cprintln.html  macro.cstr.html  macro.cwrite.html  macro.cwriteln.html  macro.untagged.html  sidebar-items.js
concolor/: all.html  enum.ColorChoice.html  enum.Stream.html  fn.get.html  index.html  struct.Color.html
concolor_query/: all.html  fn.clicolor.html  fn.clicolor_force.html  fn.is_ci.html  fn.no_color.html  fn.term_supports_ansi_color.html  fn.term_supports_color.html  fn.truecolor.html  index.html
either/: enum.Either.html  struct.IterEither.html  trait.IntoEither.html
endian_type/: all.html  index.html  struct.BigEndian.html  struct.LittleEndian.html  trait.Endian.html  type.NetworkOrder.html
examples/: aoc2023day1part1.mel  fibonacci.mel  first_class_functions.mel  (+8 more)
(+5401 files in other folders)
