[package]
name = "mechylang"
version = "0.1.0"
edition = "2021"

[lib]
name = "mechylang"
path = "src/lib.rs"

[[bin]]
name = "mechylang_cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
color-print = "0.3.4"
tap = "1.0.1"
