[package]
name = "mechylang"
version = "0.1.0"
edition = "2021"

[lib]
name = "mechylang"
path = "src/lib.rs"

[[bin]]
name = "mechylang_cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
color-print = "0.3.4"
itertools = "0.13.0"
lazy_static = "1.5.0"
miette = { version = "7.2.0", features = ["fancy"] }
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
tap = "1.0.1"


[dependencies.uuid]
version = "1.5.0"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
