[package]
name = "mechylang"
version = "0.1.0"
edition = "2021"
authors = ["Pieter Huizenga <mail@pieterhuizenga.com>"]
description = "Mechylang is a toy language created for learning purposes"
repository = "https://github.com/Dutch-Raptor/mechylang"
homepage = "https://dutch-raptor.github.io/mechylang/mechylang"
keywords = ["language", "interpreter", "repl"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "mechylang"
path = "src/lib.rs"

[[bin]]
name = "mechylang_cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.5.0", features = ["auto-color"] }
clap = { version = "4.4.4", features = ["derive"] }
color-print = "0.3.7"
itertools = "0.14.0"
lazy_static = "1.5.0"
rustyline = "15.0.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
strsim = "0.11.1"


[dependencies.uuid]
version = "1.5.0"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
